Updated 1 textarea size

--- a/zjk910FinalProject/views/pages/get.html
+++ b/zjk910FinalProject/views/pages/get.html
@@ -38,7 +38,7 @@ div {
 
 			<a ng-href='#here' ng-click='game()'  >submit</a>
 			<div>
-			<textarea rows="20" cols="1500" id="gameTextarea"></textarea>
+			<textarea rows="20" cols="1500" id="gameTextarea" style="width: 50%; height: 10em;"></textarea>
 			</div>
 		</div>
 	</form>
