added padding to every box

--- a/zjk910FinalProject/views/pages/get.html
+++ b/zjk910FinalProject/views/pages/get.html
@@ -38,7 +38,7 @@ div {
 
 			<a ng-href='#here' ng-click='game()'  >submit</a>
 			<div>
-			<textarea rows="20" cols="1500" id="gameTextarea" style="width: 50%; height: 10em;"></textarea>
+			<textarea  id="gameTextarea" style="width: 50%; height: 10em;" ></textarea>
 			</div>
 		</div>
 	</form>
@@ -63,7 +63,7 @@ div {
 			</div>
 			<a ng-href='#here' ng-click='gameSys()'  >submit</a>
 			<div>
-			<textarea rows="20" cols="1500" id="gameSysTextarea"></textarea>
+			<textarea  id="gameSysTextarea" style="width: 50%; height: 10em;"  ></textarea>
 			</div>
 		</div>
 	</form>
@@ -88,7 +88,7 @@ div {
 			</div>
 			<a ng-href='#here' ng-click='gameReg()'  >submit</a>
 			<div>
-			<textarea rows="20" cols="1500" id="gameRegTextarea"></textarea>
+			<textarea  id="gameRegTextarea" style="width: 50%; height: 10em;"  ></textarea>
 			</div>
 		</div>
 	</form>
@@ -113,7 +113,7 @@ div {
 			</div>
 			<a ng-href='#here' ng-click='gameTag()'  >submit</a>
 			<div>
-			<textarea rows="20" cols="1500" id="gameTagTextarea"></textarea>
+			<textarea  id="gameTagTextarea" style="width: 50%; height: 10em;"  ></textarea>
 			</div>
 		</div>
 	</form>
@@ -129,7 +129,7 @@ div {
 
 			<a ng-href='#here' ng-click='gamePub()' >submit</a>
 			<div>
-			<textarea rows="20" cols="1500" id="gamePubTextarea"></textarea>
+			<textarea  id="gamePubTextarea" style="width: 50%; height: 10em;"  ></textarea>
 			</div>
 		</div>
 	</form>
@@ -146,7 +146,7 @@ div {
 
 			<a ng-href='#here' ng-click='gameDev()'  >submit</a>
 			<div>
-			<textarea rows="20" cols="1500" id="gameDevTextarea"></textarea>
+			<textarea  id="gameDevTextarea" style="width: 50%; height: 10em;"  ></textarea>
 			</div>
 		</div>
 	</form>
@@ -178,7 +178,7 @@ div {
 			</div>
 			<a ng-href='#here' ng-click='gameSale()'  >submit</a>
 			<div>
-			<textarea rows="20" cols="1500" id="gameSalesTextarea"></textarea>
+			<textarea  id="gameSalesTextarea" style="width: 50%; height: 10em;"  ></textarea>
 			</div>
 		</div>
 	</form>
@@ -193,7 +193,7 @@ div {
 
 			<a ng-href='#here' ng-click='reg()'  >submit</a>
 			<div>
-			<textarea rows="20" cols="1500" id="gameRegionsTextarea"></textarea>
+			<textarea  id="gameRegionsTextarea" style="width: 50%; height: 10em;"  ></textarea>
 			</div>
 		</div>
 	</form>
@@ -207,7 +207,7 @@ div {
 
 			<a ng-href='#here' ng-click='sys()'  >submit</a>
 			<div>
-			<textarea rows="20" cols="1500" id="gameSystemsTextarea"></textarea>
+			<textarea  id="gameSystemsTextarea" style="width: 50%; height: 10em;"  ></textarea>
 			</div>
 		</div>
 	</form>
