--- a/zjk910FinalProject/views/pages/delete.html
+++ b/zjk910FinalProject/views/pages/delete.html
@@ -30,11 +30,11 @@ div {
 		<div >
 			<label  >Title</label>
 			<div >
-				<input type="text" id ="gameTitle">
+				<input type="text" id ="gameTitle" style="padding:0px 12px">
 			</div>
 			<label >Release year</label>
 			<div >
-				<input type="number" id ="gameReleaseYear">
+				<input type="number" id ="gameReleaseYear" style="padding:0px 12px">
 			</div>
 
 			<a ng-href='#here' ng-click='game()'  >submit</a>
@@ -49,15 +49,15 @@ div {
 		<div >
 			<label  >Title</label>
 			<div >
-				<input type="text" id ="gameSystemGameTitle">
+				<input type="text" id ="gameSystemGameTitle" style="padding:0px 12px">
 			</div>
 			<label  >Release year</label>
 			<div >
-				<input type="number" id ="gameSystemGameReleaseYear">
+				<input type="number" id ="gameSystemGameReleaseYear" style="padding:0px 12px" >
 			</div>
 			<label  >Game System</label>
 			<div >
-				<input type="text" id ="gameSystem">
+				<input type="text" id ="gameSystem" style="padding:0px 12px" >
 			</div>
 			<a ng-href='#here' ng-click='gameSys()'  >submit</a>
 	
@@ -72,15 +72,15 @@ div {
 		<div >
 			<label  >Title</label>
 			<div >
-				<input type="text" id ="gameRegionGameTitle">
+				<input type="text" id ="gameRegionGameTitle" style="padding:0px 12px" >
 			</div>
 			<label  >Release year</label>
 			<div >
-				<input type="number" id ="gameRegionGameReleaseYear">
+				<input type="number" id ="gameRegionGameReleaseYear" style="padding:0px 12px" >
 			</div>
 			<label  >Game Region</label>
 			<div >
-				<input type="text" id ="gameRegion">
+				<input type="text" id ="gameRegion" style="padding:0px 12px" >
 			</div>
 			<a ng-href='#here' ng-click='gameReg()'  >submit</a>
 	
@@ -95,15 +95,15 @@ div {
 		<div >
 			<label >Title</label>
 			<div >
-				<input type="text" id ="gameTagGameTitle">
+				<input type="text" id ="gameTagGameTitle" style="padding:0px 12px">
 			</div>
 			<label >Release year</label>
 			<div >
-				<input type="number" id ="gameTagGameReleaseYear">
+				<input type="number" id ="gameTagGameReleaseYear" style="padding:0px 12px">
 			</div>
 			<label  >Game Tag</label>
 			<div >
-				<input type="text" id ="gameTag">
+				<input type="text" id ="gameTag" style="padding:0px 12px">
 			</div>
 			<a ng-href='#here' ng-click='gameTag()'  >submit</a>
 	
@@ -116,7 +116,7 @@ div {
 		<div >
 			<label  >Publisher</label>
 			<div >
-				<input type="text" id ="publisherName">
+				<input type="text" id ="publisherName" style="padding:0px 12px">
 			</div>
 
 			<a ng-href='#here' ng-click='gamePub()' >submit</a>
@@ -131,7 +131,7 @@ div {
 		<div >
 			<label  >Developer</label>
 			<div >
-				<input type="text" id ="developerName">
+				<input type="text" id ="developerName" style="padding:0px 12px">
 			</div>
 
 			<a ng-href='#here' ng-click='gameDev()'  >submit</a>
@@ -146,23 +146,23 @@ div {
 		<div >
 			<label  >Title</label>
 			<div >
-				<input type="text" id ="salesGameTitle">
+				<input type="text" id ="salesGameTitle" style="padding:0px 12px">
 			</div>
 			<label  >Release year</label>
 			<div >
-				<input type="number" id ="salesGameReleaseYear">
+				<input type="number" id ="salesGameReleaseYear" style="padding:0px 12px">
 			</div>
 			<label  >Price</label>
 			<div >
-				<input type="number" id ="salesPrice">
+				<input type="number" id ="salesPrice" style="padding:0px 12px">
 			</div>
 			<label  >Game System</label>
 			<div >
-				<input type="text" id ="salesSystem">
+				<input type="text" id ="salesSystem" style="padding:0px 12px">
 			</div>
 			<label  >Organization</label>
 			<div >
-				<input type="text" id ="salesOrginization">
+				<input type="text" id ="salesOrginization" style="padding:0px 12px">
 			</div>
 			<a ng-href='#here' ng-click='gameSale()'  >submit</a>
 			
