--- a/zjk910FinalProject/views/pages/modify.html
+++ b/zjk910FinalProject/views/pages/modify.html
@@ -30,23 +30,23 @@ div {
 		<div >
 			<label  >Title</label>
 			<div >
-				<input type="text" id ="gameTitle">
+				<input type="text" id ="gameTitle" style="padding:0px 12px">
 			</div>
 			<label >Release year</label>
 			<div >
-				<input type="number" id ="gameReleaseYear">
+				<input type="number" id ="gameReleaseYear" style="padding:0px 12px">
 			</div>
 			<label  >Publisher</label>
 			<div >
-				<input type="text" id ="gamePublisher">
+				<input type="text" id ="gamePublisher" style="padding:0px 12px">
 			</div>
 			<label >Developer</label>
 			<div >
-				<input type="text" id ="gameDeveloper">
+				<input type="text" id ="gameDeveloper" style="padding:0px 12px">
 			</div>
 			<label >Budget</label>
 			<div >
-				<input type="number" id ="gameBudget">
+				<input type="number" id ="gameBudget" style="padding:0px 12px">
 			</div>
 			<a ng-href='#here' ng-click='game()'  >submit</a>
 		</div>
@@ -60,15 +60,15 @@ div {
 		<div >
 			<label  >Title</label>
 			<div >
-				<input type="text" id ="gameSystemGameTitle">
+				<input type="text" id ="gameSystemGameTitle" style="padding:0px 12px">
 			</div>
 			<label  >Release year</label>
 			<div >
-				<input type="number" id ="gameSystemGameReleaseYear">
+				<input type="number" id ="gameSystemGameReleaseYear" style="padding:0px 12px">
 			</div>
 			<label  >Game System</label>
 			<div >
-				<input type="text" id ="gameSystem">
+				<input type="text" id ="gameSystem" style="padding:0px 12px">
 			</div>
 			<a ng-href='#here' ng-click='gameSys()'  >submit</a>
 		</div>
@@ -82,15 +82,15 @@ div {
 		<div >
 			<label  >Title</label>
 			<div >
-				<input type="text" id ="gameRegionGameTitle">
+				<input type="text" id ="gameRegionGameTitle" style="padding:0px 12px">
 			</div>
 			<label  >Release year</label>
 			<div >
-				<input type="number" id ="gameRegionGameReleaseYear">
+				<input type="number" id ="gameRegionGameReleaseYear" style="padding:0px 12px">
 			</div>
 			<label  >Game Region</label>
 			<div >
-				<input type="text" id ="gameRegion">
+				<input type="text" id ="gameRegion" style="padding:0px 12px">
 			</div>
 			<a ng-href='#here' ng-click='gameReg()'  >submit</a>
 		</div>
@@ -104,15 +104,15 @@ div {
 		<div >
 			<label >Title</label>
 			<div >
-				<input type="text" id ="gameTagGameTitle">
+				<input type="text" id ="gameTagGameTitle" style="padding:0px 12px">
 			</div>
 			<label >Release year</label>
 			<div >
-				<input type="number" id ="gameTagGameReleaseYear">
+				<input type="number" id ="gameTagGameReleaseYear" style="padding:0px 12px">
 			</div>
 			<label  >Game Tag</label>
 			<div >
-				<input type="text" id ="gameTag">
+				<input type="text" id ="gameTag" style="padding:0px 12px">
 			</div>
 			<a ng-href='#here' ng-click='gameTag()'  >submit</a>
 		</div>
@@ -124,19 +124,19 @@ div {
 		<div >
 			<label  >Title</label>
 			<div >
-				<input type="text" id ="publisherName">
+				<input type="text" id ="publisherName" style="padding:0px 12px">
 			</div>
 			<label  >Publisher Founding Year</label>
 			<div >
-				<input type="number" id ="publisherFoundingYear">
+				<input type="number" id ="publisherFoundingYear" style="padding:0px 12px">
 			</div>
 			<label  >Publisher Final Year ( 0 if they still exist) </label>
 			<div >
-				<input type="number" id ="publisherFinalYear">
+				<input type="number" id ="publisherFinalYear" style="padding:0px 12px">
 			</div>
 			<label  >Publisher HQ Region</label>
 			<div >
-				<input type="text" id ="publisherHQ">
+				<input type="text" id ="publisherHQ" style="padding:0px 12px">
 			</div>
 			<a ng-href='#here' ng-click='gamePub()' >submit</a>
 		</div>
@@ -149,19 +149,19 @@ div {
 		<div >
 			<label  >Title</label>
 			<div >
-				<input type="text" id ="developerName">
+				<input type="text" id ="developerName" style="padding:0px 12px">
 			</div>
 			<label  >Developer Founding Year</label>
 			<div >
-				<input type="number" id ="developerFoundingYear">
+				<input type="number" id ="developerFoundingYear" style="padding:0px 12px">
 			</div>
 			<label  >Developer Final Year ( 0 if they still exist) </label>
 			<div >
-				<input type="number" id ="developerFinalYear">
+				<input type="number" id ="developerFinalYear" style="padding:0px 12px">
 			</div>
 			<label  >Developer HQ Region</label>
 			<div >
-				<input type="text" id ="developerHQ">
+				<input type="text" id ="developerHQ" style="padding:0px 12px">
 			</div>
 			<a ng-href='#here' ng-click='gameDev()'  >submit</a>
 		</div>
@@ -174,35 +174,35 @@ div {
 		<div >
 			<label  >Title</label>
 			<div >
-				<input type="text" id ="salesGameTitle">
+				<input type="text" id ="salesGameTitle" style="padding:0px 12px">
 			</div>
 			<label  >Release year</label>
 			<div >
-				<input type="number" id ="salesGameReleaseYear">
+				<input type="number" id ="salesGameReleaseYear" style="padding:0px 12px">
 			</div>
 			<label  >Price</label>
 			<div >
-				<input type="number" id ="salesPrice">
+				<input type="number" id ="salesPrice" style="padding:0px 12px">
 			</div>
 			<label  >Game System</label>
 			<div >
-				<input type="text" id ="salesSystem">
+				<input type="text" id ="salesSystem" style="padding:0px 12px">
 			</div>
 			<label  >Units Sold </label>
 			<div >
-				<input type="number" id ="saleUnits">
+				<input type="number" id ="saleUnits" style="padding:0px 12px">
 			</div>
 			<label  >Last Update</label>
 			<div >
-				<input type="text" id ="salesUpdate">
+				<input type="text" id ="salesUpdate" style="padding:0px 12px">
 			</div>
 			<label  >Organization</label>
 			<div >
-				<input type="text" id ="salesOrginization">
+				<input type="text" id ="salesOrginization" style="padding:0px 12px">
 			</div>
 			<label  >Region</label>
 			<div >
-				<input type="text" id ="salesRegion">
+				<input type="text" id ="salesRegion" style="padding:0px 12px">
 			</div>
 			<a ng-href='#here' ng-click='gameSale()'  >submit</a>
 		</div>
