--- a/zjk910FinalProject/views/pages/modify.html
+++ b/zjk910FinalProject/views/pages/modify.html
@@ -4,7 +4,6 @@
 <style>
 div {
   transition: all linear 0.5s;
-  background-color: white;
 }
 
 
@@ -16,7 +15,7 @@ div {
 <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-animate.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-<script src= "modifyController.js"></script>
+<script src= "controller/modifyController.js"></script>
 </head>
 <body>
 
