--- a/zjk910FinalProject/views/pages/post.html
+++ b/zjk910FinalProject/views/pages/post.html
@@ -19,7 +19,8 @@ div {
 </head>
 <body>
 
-
+<h2 align="center">ADD DATA</h1>
+<p>Welcome to the add page! This is a bit of a complicated process, but it allows you to add data to our database. But before you start adding:</p>
 <div ng-app="postApp" ng-controller='postController'>
 
 	<!-- when the add game button is cliicked it will call the function form slide to unhide/rehide the form that adds games to the database-->
