Some Quick Updates

--- a/zjk910FinalProject/views/pages/delete.html
+++ b/zjk910FinalProject/views/pages/delete.html
@@ -18,7 +18,12 @@ div {
 <script src= "controller/deleteController.js"></script>
 </head>
 <body>
-
+<h2 align="center">DELETE DATA</h1>
+<p>So, you  finally found this page, huh? Okay, we'll let you use it for now. This is an area that is very important to us, as it removes data from the database. We ask that while you are here, you submit a list of your deletions to the website admins (contact information at the bottom of the page) or ask them for permission first. </p>
+<p>To delete something, you have to fillout all fields and press "submit".</p>
+<p>Please be respectful when deleting data, as we can lose irreplacable information.</p>
+<br>
+<br>
 
 <div ng-app="deleteApp" ng-controller='deleteController'>
 
