--- a/zjk910FinalProject/views/pages/get.html
+++ b/zjk910FinalProject/views/pages/get.html
@@ -18,7 +18,11 @@ div {
 <script src= "controller/getController.js"></script>
 </head>
 <body>
-
+<h2 align="center">READ DATA</h1>
+<p>Welcome to the read page! This is not as complicated as adding something to the database, so all you need to know is that not all forms need  to be filled to see something. Just make sure that if you do fill a form, you fill them from top-to-bottom, or else the call won't work properly.</p>
+<p>The more forms you fill, the more general the information. Just press "submit" when you're ready and you'll see the result of your query in the text area beneath it.</p>
+<br>
+<br>
 
 <div ng-app="getApp" ng-controller='getController'>
 
@@ -38,7 +42,7 @@ div {
 
 			<a ng-href='#here' ng-click='game()'  >submit</a>
 			<div>
-			<textarea  id="gameTextarea" style="width: 50%; height: 10em;" ></textarea>
+			<textarea  id="gameTextarea" style="width: 100%; height: 10em;" ></textarea>
 			</div>
 		</div>
 	</form>
@@ -63,7 +67,7 @@ div {
 			</div>
 			<a ng-href='#here' ng-click='gameSys()'  >submit</a>
 			<div>
-			<textarea  id="gameSysTextarea" style="width: 50%; height: 10em;"  ></textarea>
+			<textarea  id="gameSysTextarea" style="width: 100%; height: 10em;"  ></textarea>
 			</div>
 		</div>
 	</form>
@@ -88,7 +92,7 @@ div {
 			</div>
 			<a ng-href='#here' ng-click='gameReg()'  >submit</a>
 			<div>
-			<textarea  id="gameRegTextarea" style="width: 50%; height: 10em;"  ></textarea>
+			<textarea  id="gameRegTextarea" style="width: 100%; height: 10em;"  ></textarea>
 			</div>
 		</div>
 	</form>
@@ -113,7 +117,7 @@ div {
 			</div>
 			<a ng-href='#here' ng-click='gameTag()'  >submit</a>
 			<div>
-			<textarea  id="gameTagTextarea" style="width: 50%; height: 10em;"  ></textarea>
+			<textarea  id="gameTagTextarea" style="width: 100%; height: 10em;"  ></textarea>
 			</div>
 		</div>
 	</form>
@@ -129,7 +133,7 @@ div {
 
 			<a ng-href='#here' ng-click='gamePub()' >submit</a>
 			<div>
-			<textarea  id="gamePubTextarea" style="width: 50%; height: 10em;"  ></textarea>
+			<textarea  id="gamePubTextarea" style="width: 100%; height: 10em;"  ></textarea>
 			</div>
 		</div>
 	</form>
@@ -146,7 +150,7 @@ div {
 
 			<a ng-href='#here' ng-click='gameDev()'  >submit</a>
 			<div>
-			<textarea  id="gameDevTextarea" style="width: 50%; height: 10em;"  ></textarea>
+			<textarea  id="gameDevTextarea" style="width: 100%; height: 10em;"  ></textarea>
 			</div>
 		</div>
 	</form>
@@ -178,7 +182,7 @@ div {
 			</div>
 			<a ng-href='#here' ng-click='gameSale()'  >submit</a>
 			<div>
-			<textarea  id="gameSalesTextarea" style="width: 50%; height: 10em;"  ></textarea>
+			<textarea  id="gameSalesTextarea" style="width: 100%; height: 10em;"  ></textarea>
 			</div>
 		</div>
 	</form>
@@ -193,7 +197,7 @@ div {
 
 			<a ng-href='#here' ng-click='reg()'  >submit</a>
 			<div>
-			<textarea  id="gameRegionsTextarea" style="width: 50%; height: 10em;"  ></textarea>
+			<textarea  id="gameRegionsTextarea" style="width: 100%; height: 10em;"  ></textarea>
 			</div>
 		</div>
 	</form>
@@ -207,7 +211,7 @@ div {
 
 			<a ng-href='#here' ng-click='sys()'  >submit</a>
 			<div>
-			<textarea  id="gameSystemsTextarea" style="width: 50%; height: 10em;"  ></textarea>
+			<textarea  id="gameSystemsTextarea" style="width: 100%; height: 10em;"  ></textarea>
 			</div>
 		</div>
 	</form>
