--- a/zjk910FinalProject/views/pages/modify.html
+++ b/zjk910FinalProject/views/pages/modify.html
@@ -18,7 +18,12 @@ div {
 <script src= "controller/modifyController.js"></script>
 </head>
 <body>
-
+<h2 align="center">UPDATE DATA</h1>
+<p>You're probably here because you got some new sales and realised we didn't let you add a new sales record to our database. If this is your issue, please be aware that we ask you to update sales figures of a game if you find that we are </p>
+<p>To delete something, you have to fillout all fields and press "submit".</p>
+<p>Please be respectful when deleting data, as we can lose irreplacable information.</p>
+<br>
+<br>
 
 <div ng-app="modifyApp" ng-controller='modifyController'>
 
