we can now add games to systems

--- a/zjk910FinalProject/views/pages/post.html
+++ b/zjk910FinalProject/views/pages/post.html
@@ -203,7 +203,7 @@
 			</div>
 			<label  >Last Update</label>
 			<div >
-				<input type="text" id ="salesUpdate" style="padding:0px 12px">
+				<input type="date" id ="salesUpdate" style="padding:0px 12px">
 			</div>
 			<label  >Organization</label>
 			<div >
