--- a/zjk910FinalProject/views/pages/modify.html
+++ b/zjk910FinalProject/views/pages/modify.html
@@ -135,7 +135,7 @@ div {
 			</div>
 			<label  >Last Update</label>
 			<div >
-				<input type="text" id ="salesUpdate" style="padding:0px 12px">
+				<input type="date" id ="salesUpdate" style="padding:0px 12px">
 			</div>
 			<label  >Organization</label>
 			<div >
